<resources>
    <string name="app_name">AssignmentOne</string>
    <string name="activity_a">Activity A</string>
    <string name="start_activity_b">Start Activity B</string>
    <string name="start_activity_c">Start Activity C</string>
    <string name="dialog">Dialog</string>
    <string name="sjsu_logo">SJSU LOGO</string>
    <string name="exit">Exit</string>
    <string name="thread_counter">Thread Counter:</string>
    <string name="activity_b">Activity B</string>
    <string name="activity_b_message">Activity B occupies the complete window real-estate. The Android OS forces Activity A to be Paused. However, the background thread keeps incrementing the counter…</string>
    <string name="activity_c_message">Activity C occupies the complete window real-estate. The Android OS forces Activity A to be Paused. However, the background thread keeps incrementing the counter…</string>
    <string name="finish_b">Finish B</string>
    <string name="activity_c">Activity C</string>
    <string name="finish_c">Finish C</string>
</resources>