<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_activity_a_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_a"
        android:textSize="34sp"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/btn_activity_c"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#FEB71A"
        android:text="@string/start_activity_c"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_a_title"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/btn_activity_b"
        android:layout_width="145dp"
        android:layout_height="50dp"
        android:backgroundTint="#FEB71A"
        android:text="@string/start_activity_b"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_activity_c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_a_title"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/btn_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FEB71A"
        android:text="@string/dialog"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_activity_b"
        app:layout_constraintVertical_bias="0.064" />

    <ImageView
        android:id="@+id/image_view_logo_a"
        android:layout_width="103dp"
        android:layout_height="101dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_activity_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_activity_a_title"
        app:srcCompat="@drawable/sjsu_logo"
        android:contentDescription="@string/sjsu_logo" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_thread_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thread_counter"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>