<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityB">

    <TextView
        android:id="@+id/tv_activityb_message"
        android:layout_width="350dp"
        android:layout_height="123dp"
        android:text="@string/activity_b_message"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <TextView
        android:id="@+id/tv_activityB_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_b"
        android:textColor="@color/green"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/image_view_logo_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.657" />

    <Button
        android:id="@+id/back_btn_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish_b"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_activityb_message" />

    <ImageView
        android:id="@+id/image_view_logo_b"
        android:layout_width="103dp"
        android:layout_height="101dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_activityb_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.801"
        app:srcCompat="@drawable/sjsu_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>